k8sdemo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: k8sdemo-api
  name: k8sdemo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: k8sdemo-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/identity-network: "true"
        io.kompose.service: k8sdemo-api
    spec:
      containers:
        - env:
            - name: ASPNETCORE_Kestrel__Certificates__Default__Password
              value: Password
            - name: ASPNETCORE_Kestrel__Certificates__Default__Path
              value: /app/Infrastructure/Certificate/certificate.pfx
          image: k8sdemoapi
          name: k8sdemoapicontainer
          ports:
            - containerPort: 5501
          resources: {}
          volumeMounts:
            - mountPath: /app/Infrastructure/Certificate
              name: k8sdemo-api-claim0
      restartPolicy: Always
      volumes:
        - name: k8sdemo-api-claim0
          persistentVolumeClaim:
            claimName: k8sdemo-api-claim0
status: {}
