k8sdemo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: k8sdemo-app
  name: k8sdemo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: k8sdemo-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/identity-network: "true"
        io.kompose.service: k8sdemo-app
    spec:
      containers:
        - image: k8sdemoapp
          name: k8sdemoappcontainer
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/certs
              name: k8sdemo-app-claim0
      restartPolicy: Always
      volumes:
        - name: k8sdemo-app-claim0
          persistentVolumeClaim:
            claimName: k8sdemo-app-claim0
status: {}
