k8sdemo-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: k8sdemo-database
  name: k8sdemo-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: k8sdemo-database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/identity-network: "true"
        io.kompose.service: k8sdemo-database
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: SA_PASSWORD
              value: Pass@Word1
          image: mcr.microsoft.com/mssql/server:2017-latest
          name: k8sdemoapidbcontainer
          ports:
            - containerPort: 1433
          resources: {}
          volumeMounts:
            - mountPath: /var/opt/mssql
              name: k8sdemo-database-claim0
      restartPolicy: Always
      volumes:
        - name: k8sdemo-database-claim0
          persistentVolumeClaim:
            claimName: k8sdemo-database-claim0
status: {}
