k8sdemo-director-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: k8sdemo-director
  name: k8sdemo-director
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: k8sdemo-director
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/identity-network: "true"
        io.kompose.service: k8sdemo-director
    spec:
      containers:
        - image: k8sdemodirector
          name: k8sdemodirectorcontainer
          resources: {}
      restartPolicy: Always
status: {}
