k8sdemo-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: k8sdemo-rabbitmq
  name: k8sdemo-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: k8sdemo-rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/identity-network: "true"
        io.kompose.service: k8sdemo-rabbitmq
    spec:
      containers:
        - image: rabbitmq:3-management
          name: k8sdemorabbitmqcontainer
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
      hostname: k8sDemo-rabbitMq
      restartPolicy: Always
status: {}
