k8sDemo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: k8sdemo-api
  name: k8sDemo-api
spec:
  ports:
    - name: "5501"
      port: 5501
      targetPort: 5501
  selector:
    io.kompose.service: k8sdemo-api
status:
  loadBalancer: {}
